Change popup message size and alignment, fix bug when canceling the other popups

--- a/src/style.css
+++ b/src/style.css
@@ -201,6 +201,11 @@
     font-weight: 400;
 }
 
+.centered {
+    align-self: center;
+    text-align: center;
+}
+
 .glass {
     background: var(--firefox-white);
     border-radius: 45px;
